Kubernetes-Final-Task/services.yml
apiVersion: v1
kind: Service
metadata:
  name: bitcoin-rate-service
  labels:
    app: bitcoin-rate-service
spec:
  type: ClusterIP
  selector:
    app: bitcoin-rate
  ports:
  - name: bitcoin-service
    protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: ynet-rss-service
  labels:
    app: ynet-rss-service
spec:
  type: ClusterIP
  selector:
    app: ynet-rss
  ports:
  - name: ynet-rss-service
    protocol: TCP
    port: 5001
    targetPort: 5001
