Kubernetes-Final-Task/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    
spec:
  rules:
    - http:
        paths:
          - path: /bitcoin-rate(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: bitcoin-rate-service
                port:
                  number: 5000
    - http:
        paths:
          - path: /ynet-rss(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ynet-rss-service
                port:
                  number: 5001
